--- a/navigation/config/costmap_common_params.yaml
+++ b/navigation/config/costmap_common_params.yaml
@@ -1,6 +1,8 @@
 obstacle_range: 14
 raytrace_range: 14
 
+transform_tolerance: 1
+
 footprint: [[0.4, -0.30], [0.4, 0.3], [-0.4,0.3], [-0.4, -0.3]]
 
 plugins:
