--- a/navigation/config/move_base.yaml
+++ b/navigation/config/move_base.yaml
@@ -9,7 +9,7 @@ oscillation_timeout: 10.0
 oscillation_distance: 0.5
 
 # Global planner
-planner_frequency: 0.0
+planner_frequency: 4.0 #0.0
 planner_patience: 5.0
 NavfnROS:
   allow_unknown: true  # TODO: investigate this
@@ -21,7 +21,7 @@ NavfnROS:
   visualize_potential: false
 
 # Local planner
-controller_frequency: 25.0
+controller_frequency: 4.0 #25.0
 controller_patience: 15.0
 TrajectoryPlannerROS:
   # base vel/accel profile is in robot folders
