--- a/navigation/config/global_planner_params.yaml
+++ b/navigation/config/global_planner_params.yaml
@@ -1,7 +1,7 @@
 base_global_planner: global_planner/GlobalPlanner
 
 GlobalPlanner:
-  planner_frequency: 0.6
+  planner_frequency: 30 # 0.6
   planner_patience: 0.0
   orientation_mode: 2 # interpolate from current orientation to last orientation
 
